syntax = "proto3";
package peggy.v1;

import "gogoproto/gogo.proto";
import "peggy/v1/peggy.proto";
import "peggy/v1/tx.proto";

option go_package = "github.com/althea-net/peggy/module/x/peggy/types";

// GenesisState struct
message GenesisState {
  Params                    params          = 1;
  repeated Valset           valsets         = 2;
  repeated MsgValsetConfirm valset_confirms = 3 [(gogoproto.moretags) = "yaml:\"valset_confirms\""];
  repeated OutgoingTxBatch  batches         = 4;
  repeated MsgConfirmBatch  batch_confirms  = 5 [(gogoproto.moretags) = "yaml:\"batch_confirms\"", (gogoproto.nullable) = false];
  repeated Attestation      attestations    = 6 [(gogoproto.nullable) = false];
}
